; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/nvidia/extr_nv_accel.c_nvidiafb_mono_color_expand.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/nvidia/extr_nv_accel.c_nvidiafb_mono_color_expand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { i64, %struct.TYPE_2__, %struct.nvidia_par* }
%struct.TYPE_2__ = type { i32 }
%struct.nvidia_par = type { i32 }
%struct.fb_image = type { i32, i32, i32, i32, i32, i32, i64 }

@RECT_EXPAND_TWO_COLOR_CLIP = common dso_local global i32 0, align 4
@RECT_EXPAND_TWO_COLOR_DATA_MAX_DWORDS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fb_info*, %struct.fb_image*)* @nvidiafb_mono_color_expand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvidiafb_mono_color_expand(%struct.fb_info* %0, %struct.fb_image* %1) #0 {
  %3 = alloca %struct.fb_info*, align 8
  %4 = alloca %struct.fb_image*, align 8
  %5 = alloca %struct.nvidia_par*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.fb_info* %0, %struct.fb_info** %3, align 8
  store %struct.fb_image* %1, %struct.fb_image** %4, align 8
  %15 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %16 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %15, i32 0, i32 2
  %17 = load %struct.nvidia_par*, %struct.nvidia_par** %16, align 8
  store %struct.nvidia_par* %17, %struct.nvidia_par** %5, align 8
  %18 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %19 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = sub nsw i32 32, %21
  %23 = ashr i32 -1, %22
  %24 = xor i32 %23, -1
  store i32 %24, i32* %8, align 4
  %25 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %26 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %25, i32 0, i32 6
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to i32*
  store i32* %28, i32** %11, align 8
  store i32 0, i32* %14, align 4
  %29 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %30 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = add nsw i32 %31, 31
  %33 = and i32 %32, -32
  store i32 %33, i32* %10, align 4
  %34 = load i32, i32* %10, align 4
  %35 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %36 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = mul nsw i32 %34, %37
  %39 = ashr i32 %38, 5
  store i32 %39, i32* %9, align 4
  %40 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %41 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = icmp eq i32 %43, 8
  br i1 %44, label %45, label %56

45:                                               ; preds = %2
  %46 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %47 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 8
  %49 = load i32, i32* %8, align 4
  %50 = or i32 %48, %49
  store i32 %50, i32* %6, align 4
  %51 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %52 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %51, i32 0, i32 3
  %53 = load i32, i32* %52, align 4
  %54 = load i32, i32* %8, align 4
  %55 = or i32 %53, %54
  store i32 %55, i32* %7, align 4
  br label %81

56:                                               ; preds = %2
  %57 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %58 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = inttoptr i64 %59 to i32*
  %61 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %62 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %61, i32 0, i32 2
  %63 = load i32, i32* %62, align 8
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds i32, i32* %60, i64 %64
  %66 = load i32, i32* %65, align 4
  %67 = load i32, i32* %8, align 4
  %68 = or i32 %66, %67
  store i32 %68, i32* %6, align 4
  %69 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %70 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %69, i32 0, i32 0
  %71 = load i64, i64* %70, align 8
  %72 = inttoptr i64 %71 to i32*
  %73 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %74 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %73, i32 0, i32 3
  %75 = load i32, i32* %74, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds i32, i32* %72, i64 %76
  %78 = load i32, i32* %77, align 4
  %79 = load i32, i32* %8, align 4
  %80 = or i32 %78, %79
  store i32 %80, i32* %7, align 4
  br label %81

81:                                               ; preds = %56, %45
  %82 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %83 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %84 = load i32, i32* @RECT_EXPAND_TWO_COLOR_CLIP, align 4
  %85 = call i32 @NVDmaStart(%struct.fb_info* %82, %struct.nvidia_par* %83, i32 %84, i32 7)
  %86 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %87 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %88 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %87, i32 0, i32 4
  %89 = load i32, i32* %88, align 8
  %90 = shl i32 %89, 16
  %91 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %92 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %91, i32 0, i32 5
  %93 = load i32, i32* %92, align 4
  %94 = and i32 %93, 65535
  %95 = or i32 %90, %94
  %96 = call i32 @NVDmaNext(%struct.nvidia_par* %86, i32 %95)
  %97 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %98 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %99 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %98, i32 0, i32 4
  %100 = load i32, i32* %99, align 8
  %101 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %102 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %101, i32 0, i32 1
  %103 = load i32, i32* %102, align 4
  %104 = add nsw i32 %100, %103
  %105 = shl i32 %104, 16
  %106 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %107 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %106, i32 0, i32 5
  %108 = load i32, i32* %107, align 4
  %109 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %110 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %109, i32 0, i32 0
  %111 = load i32, i32* %110, align 8
  %112 = add nsw i32 %108, %111
  %113 = and i32 %112, 65535
  %114 = or i32 %105, %113
  %115 = call i32 @NVDmaNext(%struct.nvidia_par* %97, i32 %114)
  %116 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %117 = load i32, i32* %7, align 4
  %118 = call i32 @NVDmaNext(%struct.nvidia_par* %116, i32 %117)
  %119 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %120 = load i32, i32* %6, align 4
  %121 = call i32 @NVDmaNext(%struct.nvidia_par* %119, i32 %120)
  %122 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %123 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %124 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %123, i32 0, i32 1
  %125 = load i32, i32* %124, align 4
  %126 = shl i32 %125, 16
  %127 = load i32, i32* %10, align 4
  %128 = or i32 %126, %127
  %129 = call i32 @NVDmaNext(%struct.nvidia_par* %122, i32 %128)
  %130 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %131 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %132 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %131, i32 0, i32 1
  %133 = load i32, i32* %132, align 4
  %134 = shl i32 %133, 16
  %135 = load i32, i32* %10, align 4
  %136 = or i32 %134, %135
  %137 = call i32 @NVDmaNext(%struct.nvidia_par* %130, i32 %136)
  %138 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %139 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %140 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %139, i32 0, i32 4
  %141 = load i32, i32* %140, align 8
  %142 = shl i32 %141, 16
  %143 = load %struct.fb_image*, %struct.fb_image** %4, align 8
  %144 = getelementptr inbounds %struct.fb_image, %struct.fb_image* %143, i32 0, i32 5
  %145 = load i32, i32* %144, align 4
  %146 = and i32 %145, 65535
  %147 = or i32 %142, %146
  %148 = call i32 @NVDmaNext(%struct.nvidia_par* %138, i32 %147)
  br label %149

149:                                              ; preds = %175, %81
  %150 = load i32, i32* %9, align 4
  %151 = load i32, i32* @RECT_EXPAND_TWO_COLOR_DATA_MAX_DWORDS, align 4
  %152 = icmp sge i32 %150, %151
  br i1 %152, label %153, label %179

153:                                              ; preds = %149
  %154 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %155 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %156 = call i32 @RECT_EXPAND_TWO_COLOR_DATA(i32 0)
  %157 = load i32, i32* @RECT_EXPAND_TWO_COLOR_DATA_MAX_DWORDS, align 4
  %158 = call i32 @NVDmaStart(%struct.fb_info* %154, %struct.nvidia_par* %155, i32 %156, i32 %157)
  %159 = load i32, i32* @RECT_EXPAND_TWO_COLOR_DATA_MAX_DWORDS, align 4
  store i32 %159, i32* %13, align 4
  br label %160

160:                                              ; preds = %164, %153
  %161 = load i32, i32* %13, align 4
  %162 = add nsw i32 %161, -1
  store i32 %162, i32* %13, align 4
  %163 = icmp ne i32 %161, 0
  br i1 %163, label %164, label %175

164:                                              ; preds = %160
  %165 = load i32*, i32** %11, align 8
  %166 = load i32, i32* %14, align 4
  %167 = add nsw i32 %166, 1
  store i32 %167, i32* %14, align 4
  %168 = sext i32 %166 to i64
  %169 = getelementptr inbounds i32, i32* %165, i64 %168
  %170 = load i32, i32* %169, align 4
  store i32 %170, i32* %12, align 4
  %171 = call i32 @reverse_order(i32* %12)
  %172 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %173 = load i32, i32* %12, align 4
  %174 = call i32 @NVDmaNext(%struct.nvidia_par* %172, i32 %173)
  br label %160

175:                                              ; preds = %160
  %176 = load i32, i32* @RECT_EXPAND_TWO_COLOR_DATA_MAX_DWORDS, align 4
  %177 = load i32, i32* %9, align 4
  %178 = sub nsw i32 %177, %176
  store i32 %178, i32* %9, align 4
  br label %149

179:                                              ; preds = %149
  %180 = load i32, i32* %9, align 4
  %181 = icmp ne i32 %180, 0
  br i1 %181, label %182, label %205

182:                                              ; preds = %179
  %183 = load %struct.fb_info*, %struct.fb_info** %3, align 8
  %184 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %185 = call i32 @RECT_EXPAND_TWO_COLOR_DATA(i32 0)
  %186 = load i32, i32* %9, align 4
  %187 = call i32 @NVDmaStart(%struct.fb_info* %183, %struct.nvidia_par* %184, i32 %185, i32 %186)
  %188 = load i32, i32* %9, align 4
  store i32 %188, i32* %13, align 4
  br label %189

189:                                              ; preds = %193, %182
  %190 = load i32, i32* %13, align 4
  %191 = add nsw i32 %190, -1
  store i32 %191, i32* %13, align 4
  %192 = icmp ne i32 %190, 0
  br i1 %192, label %193, label %204

193:                                              ; preds = %189
  %194 = load i32*, i32** %11, align 8
  %195 = load i32, i32* %14, align 4
  %196 = add nsw i32 %195, 1
  store i32 %196, i32* %14, align 4
  %197 = sext i32 %195 to i64
  %198 = getelementptr inbounds i32, i32* %194, i64 %197
  %199 = load i32, i32* %198, align 4
  store i32 %199, i32* %12, align 4
  %200 = call i32 @reverse_order(i32* %12)
  %201 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %202 = load i32, i32* %12, align 4
  %203 = call i32 @NVDmaNext(%struct.nvidia_par* %201, i32 %202)
  br label %189

204:                                              ; preds = %189
  br label %205

205:                                              ; preds = %204, %179
  %206 = load %struct.nvidia_par*, %struct.nvidia_par** %5, align 8
  %207 = call i32 @NVDmaKickoff(%struct.nvidia_par* %206)
  ret void
}

declare dso_local i32 @NVDmaStart(%struct.fb_info*, %struct.nvidia_par*, i32, i32) #1

declare dso_local i32 @NVDmaNext(%struct.nvidia_par*, i32) #1

declare dso_local i32 @RECT_EXPAND_TWO_COLOR_DATA(i32) #1

declare dso_local i32 @reverse_order(i32*) #1

declare dso_local i32 @NVDmaKickoff(%struct.nvidia_par*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
